Реализация таблицы юзеров

--- a/TeleDataAnalyzerLib/TeleDataAnalyzerLib.csproj
+++ b/TeleDataAnalyzerLib/TeleDataAnalyzerLib.csproj
@@ -30,11 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.5.2.1, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.5.2.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +53,9 @@
     <Compile Include="ParseTask.cs" />
     <Compile Include="ParseTaskRunner.cs" />
     <Compile Include="ParseTaskStatus.cs" />
+    <Compile Include="Tasks\Analyse\ExcelWriter.cs" />
+    <Compile Include="Tasks\Analyse\GroupUsersTable.cs" />
+    <Compile Include="Tasks\Analyse\GroupGeneralInfo.cs" />
     <Compile Include="Tasks\ParseMessagesTask.cs" />
     <Compile Include="Tasks\ParseJSONTask.cs" />
     <Compile Include="Units\ChatType.cs" />
